aws setting pending

--- a/backend/core/.env
+++ b/backend/core/.env
@@ -2,9 +2,17 @@ SECRET_KEY="^^byd^4r@=uqq=g@r4t*k(*v4=r5q1bt)6sccbuc8^cm0c*mp^"
 DOMAIN="http://localhost:8000"
 TAXES="0.18"
 
+EMAIL_HOST=''
+EMAIL_PORT=''
+EMAIL_HOST_USER=''
+EMAIL_HOST_PASSWORD=''
+EMAIL_USE_TLS=''
+
 ALLOWED_HOSTS_DEV=*
 ALLOWED_HOSTS_DEPLOY=.brmz.com
 
 CORS_ORIGIN_WHITELIST_DEV=http://localhost:3000
 CSRF_TRUSTED_ORIGINS_DEV=http://localhost:3000
-```
+
+POLYGON_RFC='https://polygon-mumbai.g.alchemy.com/v2/-V50Xk_J-lbaWAKQW26-w_DFQjqdDpNT'
+ETHEREOUM_RFC='https://eth-goerli.g.alchemy.com/v2/gYcy9BSCJiLSYiLl9i1kp6N7c0Ahgeed'
